# Flame

./: .gitignore  AGENT1_AUDIT_REPORT.md  AGENT2_ARCHITECTURE_CLEANUP.md  AGENT2_TEST_REPORT.md  AGENT3_PRODUCTION_REPORT.md  AGENTS-F32-AUDIT.md  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  ARCHITECTURE_VIOLATIONS.md  AUTOGRAD_AUDIT.md  BF16_AUDIT.md  CLAUDE.md  Cargo.toml  ERIDIFFUSION_REALITY_CHECK.md  FA2_CP_ASYNC_DESIGN.md  FLAME_AUDIT_REPORT.md  FLAME_AUTOGRAD_COVERAGE.md  FLAME_FINAL_ASSESSMENT.md  FLAME_FIX_AGENTS_REPORT.md  FLAME_IMPLEMENTATION_AUDIT.md  FLAME_IMPLEMENTATION_PLAN.md  FLAME_OVERVIEW.md  FLAME_REQUIREMENTS.md  FLAME_STATUS.md  FLAME_TEST_RESULTS_SUMMARY.md  FLAME_TODO_IMPLEMENTATIONS.md  FLAME_VERIFICATION_FINAL_REPORT.md  GRADIENT_MUTABILITY_AUDIT.md  GRADIENT_TEST_VALIDATION_REPORT.md  INFERENCE_EXTRACTION.md  INTEGRATION_STATUS_REPORT.md  INTEGRATION_TEST_RESULTS.md  PLAN_STRIDE_REFACTOR_PROFILE.md  README.md  SILENT_FAILURES_FIXED.md  TECHNICAL_DETAILS.md  TENSOR_OPS_AUDIT.md  TEST_RESULTS_REPORT.md  TROUBLESHOOTING.md  (+19 more)
EriDiffusionDocs/: README.md  data_loading_api.md  flame_autograd_api.md  flame_device_api.md  flame_layers_api.md  flame_optimizer_api.md  flame_tensor_api.md  memory_management_api.md  pipeline_api.md  sampling_inference_api.md  vae_text_encoding_api.md
benches/: activation_bwd.rs  add_iter_alloc.rs  fa2_forward.rs  gelu_iter_alloc.rs  silu_iter_alloc.rs  square_iter_alloc.rs  strides_alloc.rs
benchmarks/: compare_ops.py  op_bench_pytorch.py
cuda/: add_inplace.cu  add_same_shape.cu  bf16_broadcast_repeat.cu  bf16_slice_index.cu  broadcast.cu  conv2d_nhwc_bf16.cu  cuda_ops.cu  cuda_ops.h  cuda_ops_common.cu  gate_mul_bf16.cu  gemm_bf16_cublaslt.cu  gemm_bf16_fp32acc.cu  modulate_affine_bf16.cu  narrow_strided.cu  narrow_strided_backward.cu  permute0213.cu  reduce_sum_bf16.cu  repeat_bf16.cu  sdpa_stream_bf16.cu  streaming_attn_bf16.cu  streaming_attn_bf16.h  tile_bc.cu  upsample_bilinear.cu  upsample_nearest.cu
docs/: AUTOGRAD_PERF_AUDIT_2026-04-15.md  AUTOGRAD_SPEED_GUIDE.md  BF16_CUDA_OPS_TODO.md  BF16_KERNELS_IMPLEMENTATION_PROMPT.md  FLAME_AUTOGRAD_INTERNALS.md  FLAME_CONVENTIONS.md  FLAME_INDEX.md  FLAME_KERNELS.md  FLAME_MODULES.md  FLAME_OVERHEAD_AUDIT.md  FLAME_README.md  HANDOFF_BF16_KERNELS.md  TENSORITERATOR_PORT_REFERENCE.md
examples/: agent2_verification.rs  agent3_training_loop.rs  agent4_simple_trainer.rs  agent4_trainer_config.rs  eridiffusion_migration_poc.rs  simple_accuracy_test.rs  test_autograd.rs  test_basic_ops.rs  test_conv2d_perf.rs  test_flame_candle_comparison.rs  test_flame_gradients.rs  test_flame_training_sim.rs  test_gradient_modifications.rs  test_nvrtc.rs  test_vae_direct.rs  test_vae_perf_fixed.rs
flame-core/: Cargo.toml  MEMORY_USAGE_ANALYSIS.md  build.rs  build_output2.txt  cargo_errors2.txt  fix_conv2d_calls.sh  fix_cuda_device_arc.sh  run_all_tests.sh
flame-core/cuda/: narrow_strided.cu  narrow_strided_backward.cu
flame-core/examples/: _placeholder.rs  activation_test.rs  attention_test.rs  autograd_demo.rs  autograd_test.rs  autograd_training.rs  autograd_v2_test.rs  bmm_test.rs  conv2d_cuda_test.rs  conv2d_demo.rs  cuda_kernel_test.rs  debug_backward.rs  debug_grad_issue.rs  end_to_end_test.rs  gradient_clip_test.rs  gradient_demo_simple.rs  gradient_modification_demo.rs  kernel_launcher_example.rs  mixed_precision_test.rs  norm_demo.rs  optimizer_test.rs  regularization_test.rs  serialization_test.rs  simple_flame_test.rs  simple_training_test.rs  tensor_ops.rs  test_activations.rs  test_adam_optimizer.rs  test_attention.rs  test_autograd_basic.rs  test_autograd_complete.rs  test_autograd_context.rs  test_autograd_simple.rs  test_candle_interop.rs  test_conv2d_backward.rs  test_conv2d_direct.rs  test_conv3d.rs  test_cudnn.rs  test_cudnn_always_on.rs  test_cudnn_conv2d.rs  (+37 more)
flame-core/src/: activations.rs  adam.rs  attention.rs  autograd.rs  autograd.rs.backup  autograd_debug.rs  autograd_engine.rs  autograd_ops.rs  autograd_ops_complete.rs  autograd_simple.rs  autograd_v2.rs  autograd_v3.rs  bf16_clamp.rs  bf16_convert.rs  bf16_elementwise.rs  bf16_factories.rs  bf16_normal.rs  bf16_ops.rs  bf16_support.rs  blas.rs  candle_interop.rs  capi.rs  config.rs  conv.rs  conv3d.rs  conv3d_simple.rs  cuda_conv2d.rs  cuda_conv2d_direct.rs  cuda_conv2d_fast.rs  cuda_conv2d_kernels.rs  cuda_gradient_ops.rs  cuda_kernel_compiler.rs  cuda_kernel_sources.rs  cuda_kernels.rs  cuda_kernels_gpu.rs  cuda_kernels_old.rs  cuda_kernels_v2.rs  cuda_memory_alignment.rs  cuda_ops.rs  cuda_tensor.rs  (+49 more)
flame-core/src/cuda/: dtype_tag.rs  ffi.rs  kernels.cu  kernels.rs  mod.rs  narrow_strided.cu
flame-core/src/cudnn/: activation.rs  algorithms.rs  attention.rs  conv2d.rs  descriptors.rs  handle.rs  linear.rs  matmul.rs  matmul_simple.rs  mod.rs  norm.rs
flame-core/src/tests/: dtype_cast.rs  gather_rows.rs  where_mask.rs
flame-core/src/vae/: autoencoder_kl.rs  mod.rs
flame-core/tests/: activation_backward.rs  attn_sdpa_smoke.rs  autograd_integration_test.rs  cnn_training_test.rs  conv2d_nhwc_parity.rs  conv2d_nhwc_smoke.rs  core_operations_test.rs  cuda_rng_paths.rs  devtensor_smoke.rs  elementwise_gpu_smoke.rs  eridiffusion_compat_simple.rs  eridiffusion_compatibility_test.rs  find_autograd_hang.rs  framework_genericity_test.rs  grad_sanity.rs  gradient_checkpoint_smoke.rs  gradient_tests.rs  image_ops_edge_cases.rs  image_ops_gpu_smoke.rs  maximum_broadcast_grad.rs  memory_stability_test.rs  ops_ext_smoke.rs  optimizer_bf16_policy.rs  optimizer_state_fp32.rs  performance_optimization_test.rs  performance_test.rs  real_weights_tests.rs  reality_check_test.rs  reduce_max_keepdim_parity.rs  reshape_backward_test.rs  simple_cnn_test.rs  slice_cuda.rs  softmax_gpu_stability.rs  tensor_comprehensive_test.rs  test_autograd.rs  test_autograd_fix.rs  test_backward_hang.rs  test_eridiffusion_integration.rs  test_exact_hang.rs  test_memory_efficiency.rs  (+8 more)
flame-test/: Cargo.toml
kernels/: adaln_layernorm_bf16.cu  adaln_layernorm_bf16.h  geglu_kernels.cu  gelu_backward.cu  relu_backward.cu  rope_kernels.cu  (+4 more)
(+385 files in other folders)
