[package]
name = "flame-core"
version = "0.1.0"
authors = ["Alex"]
edition = "2021"
license = "MIT"
repository = "https://github.com/CodeAlexx/Flame"
description = "Core tensor operations and autograd for FLAME"

[dependencies]
cudarc = { version = "0.11.9", features = ["driver", "cublas", "nvrtc", "cuda-12050"] }
half = { version = "2.3", features = ["num-traits"] }
num-traits = "0.2"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
rand_distr = "0.4"
lazy_static = "1.4"
serde_json = "1.0"
image = "0.24"
ctor = "0.2"


[features]
# Keep defaults minimal and explicit: only NVRTC path by default.
default = ["nvrtc"]
nvrtc = []
flash_attn = []   # Opt-in only (not enabled by default)
cudnn = []        # Opt-in only
# Retain legacy/cuda toggles for compatibility (off by default)
legacy = []
cuda = []
capi = []
# Developer-only examples; never built unless explicitly enabled.
dev-examples = []
# Experimental: true BF16 GPU storage and BF16 GEMM
bf16_u16 = []

[lib]
crate-type = ["rlib", "cdylib"]

[build-dependencies]
cbindgen = "0.26"
cc = "1.0"

[[example]]
name = "test_cudnn_conv2d"
required-features = ["cudnn"]
path = "examples/_placeholder.rs"

[[example]]
name = "weight_update"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]

[[example]]
name = "autograd_demo"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]

[[example]]
name = "conv2d_demo"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]

[[example]]
name = "norm_demo"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]

[[example]]
name = "cuda_kernel_test"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]

[[example]]
name = "transpose_test"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]

[[example]]
name = "autograd_training"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]

[[example]]
name = "conv2d_cuda_test"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]

[[example]]
name = "activation_test"
path = "examples/activation_test.rs"
required-features = ["dev-examples"]

[[example]]
name = "optimizer_test"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]

[[example]]
name = "attention_test"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]

[[example]]
name = "serialization_test"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]

[[example]]
name = "bmm_test"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]

[[example]]
name = "regularization_test"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]

[[example]]
name = "mixed_precision_test"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]

[[example]]
name = "gradient_clip_test"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]

[[example]]
name = "autograd_test"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]

[[example]]
name = "autograd_v2_test"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]

[[example]]
name = "kernel_launcher_example"
path = "examples/_placeholder.rs"
required-features = ["dev-examples"]
[[example]]
name = "test_cudnn_simple"
required-features = ["cudnn"]
path = "examples/_placeholder.rs"
