[package]
name = "flame-core"
version = "0.1.0"
authors = ["Alex"]
edition = "2021"
license = "MIT"
repository = "https://github.com/CodeAlexx/Flame"
description = "Core tensor operations and autograd for FLAME"

[dependencies]
cudarc = { version = "0.11.9", features = ["driver", "cublas", "nvrtc", "cuda-12050"] }
half = { version = "2.3", features = ["num-traits"] }
num-traits = "0.2"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
rand_distr = "0.4"
lazy_static = "1.4"
serde_json = "1.0"
image = "0.24"
ctor = "0.2"


[features]
# Keep defaults minimal and explicit: no optional features enabled by default.
default = []
nvrtc = []
flash_attn = []   # Opt-in only (not enabled by default)
cudnn = []        # Opt-in only
# Retain legacy/cuda toggles for compatibility (off by default)
legacy = []
legacy_cpu_autograd = []
legacy_full = []
cuda = []
capi = []
# Developer-only examples; never built unless explicitly enabled.
dev-examples = []
# Experimental: true BF16 GPU storage and BF16 GEMM
bf16_u16 = []
# Experimental: store Adam moment buffers in BF16 and skip automatic FP32 grad upcast.
true_bf16_optimizer_states = []

[lib]
crate-type = ["rlib", "cdylib"]

[build-dependencies]
cbindgen = "0.26"
cc = "1.0"
