[package]
name = "flame-test"
version = "0.1.0"
edition = "2021"

[dependencies]
flame-core = { path = "../flame-core" }
cudarc = { workspace = true }
anyhow = "1.0"

[[bin]]
name = "simple_accuracy"
path = "../examples/simple_accuracy_test.rs"

[[bin]]
name = "simple_trainer"
path = "../examples/agent4_simple_trainer.rs"
